<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragment.SettingsFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="8"
        tools:src="@drawable/p0" />

    <Button
        android:id="@+id/b_play_pause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#00ff00"
        android:drawableLeft="@drawable/ic_start"
        android:gravity="center"
        android:text="@string/play" />

    <TextView
        android:id="@+id/tv_start_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/starting_speed" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_first_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:value="1.0"
        android:valueFrom="0.2"
        android:valueTo="5.0" />

    <TextView
        android:id="@+id/tv_middle_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/middle_speed" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_center_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:value="1.0"
        android:valueFrom="0.2"
        android:valueTo="5.0" />

    <TextView
        android:id="@+id/tv_frame_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/media_frame_index" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_frame_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:stepSize="1"
        android:layout_marginEnd="30dp"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="99" />

    <TextView
        android:id="@+id/tv_finish_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/ending_speed" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_last_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:value="1.0"
        android:valueFrom="0.2"
        android:valueTo="5.0" />

</LinearLayout>